--- a/podstrona1/podstrona1.html
+++ b/podstrona1/podstrona1.html
@@ -26,7 +26,7 @@
                 <h3><center><a href="https://www.youtube.com/watch?v=ooy35xKTZtE" target="_blank"><span style=color:rgb(255, 0, 0)> <span style=font-family:cursive>IDŹ DO ŹRÓDŁA</span></a></center></h3>
                 </div>
                 <div>
-                    <h3><center><a href="../index.html" target="_blank"><span style=color:rgb(255, 0, 0)> <span style=font-family:cursive>IDŹ DO ŹRÓDŁA</span></a></center></h3>
+                    <h3><center><a href="../index.html" target="_blank"><span style=color:rgb(255, 0, 0)> <span style=font-family:cursive>STRONA GŁÓWNA</span></a></center></h3>
                     </div>
         <footer>
             <center>Monika Mondrzejewska</center>
